# image-trashing-service

./: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml  run.py
igallery/: __init__.py  app.py  database.py  file_operations.py  thumbnail_service.py
igallery/templates/: base.html  carousel.html  index.html  trash.html
tests/: __init__.py  test_app.py  test_database.py  test_database_recovery.py  test_file_operations.py  test_integration.py  test_thumbnail_service.py
